<resources>
    <string name="app_name">Simple calculator</string>
    <string name="first_argument">First argument</string>
    <string name="second_argument">Second argument</string>
    <string name="sign_addition">+</string>
    <string name="sign_subtraction">-</string>
    <string name="sign_multiplication">*</string>
    <string name="sign_division">/</string>
    <string name="result">Result:</string>
</resources>
